--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@ body {
   background: rgba(0,0,0,0.05);
   width: 100%;
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
 
 h1, h2, h4, p {
