--- a/style/widget/user_repos_view.css
+++ b/style/widget/user_repos_view.css
@@ -16,6 +16,10 @@
     padding: 0 15px;
 }
 
+.repo:hover {
+    background: rgba(0,0,0,0.06) !important;
+}
+
 #repoHeader {
     border-bottom: solid 1px rgba(0, 0, 0, 0.8);
     align-self: flex-start;
